--- a/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/PrimalEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -8,6 +8,7 @@
              xmlns:ctlr="clr-namespace:PrimalEditor.Utilities.Controls"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:gameproject="clr-namespace:PrimalEditor.GameProject"
+             xmlns:c="clr-namespace:PrimalEditor.Content"
              d:DataContext="{d:DesignInstance Type=gameproject:Project}"
              mc:Ignorable="d" Focusable="True"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -113,6 +114,7 @@
 
 				<Grid Grid.Row="1" Margin="0,5,0,0">
 					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="250" />
 						<ColumnDefinition />
 						<ColumnDefinition />
 					</Grid.ColumnDefinitions>
@@ -124,6 +126,11 @@
                                   HorizontalAlignment="Left" Background="Transparent" />
 
 					<utl:LoggerView Grid.Column="1" Margin="5,0,0,0" />
+
+					<GridSplitter Grid.Column="2" Width="5" VerticalAlignment="Stretch"
+									HorizontalAlignment="Left" Background="Transparent" />
+
+					<c:ContentBrowserView Grid.Column="2" Margin="5,0,0,0" />
 				</Grid>
 
 			</Grid>
